2004-01-16  Christopher Faylor  <cgf@redhat.com>

	* cygtls.h (_threadinfo::threadkill): New element.
	(_threadinfo::set_threadkill): Declare new function.
	(_threadinfo::reset_threadkill): Declare new function.
	* dcrt0.cc (dcrt0_1): Call here so that it will be possible to attach
	to running process with #(*& Windows Me/9x.
	(initial_env): Try to initialize strace if uninitialized.
	* gendef: Don't zero signal if threadkill is set since that will happen
	in the called function.
	* signal.cc (sigwait): Ensure cleanup in error conditions.
	* sigproc.cc (sig_send): Clear packet mask storage.
	(wait_subproc): Fill in child exit code in siginfo_t structure.
	* thread.cc (pthread_kill): Set threadkill flag.
	* tlsoffsets.h: Regenerate.

2004-01-16  Christopher Faylor  <cgf@redhat.com>

	Throughout, use siginfo_t to fill out all signal information for
	"kernel" signals.
	* cygtls.h (_threadinfo::set_siginfo): Declare new function.
	* cygtls.cc (_threadinfo::set_siginfo): Define new function.
	* dcrt0.cc (do_exit): Accommodate siginfo_t considerations.
	* exceptions.cc (handle_exceptions): Ditto.
	(sig_handle_tty_stop): Ditto.
	(ctrl_c_handler): Use killsys() to send signal.
	(sigpacket::process): Rename from sig_handle.  Use siginfo_t field from
	sigpacket for everything.
	(tty_min::kill_pgrp): Accommodate siginfo_t considerations.
	(fhandler_termios::bg_check): Ditto.
	* fhandler_tty.cc (fhandler_tty_slave::ioctl): Use killsys() to send signal.
	* signal.cc (kill_worker): Rewrite to use siginfo_t second argument.
	(kill_pgrp): Ditto.
	(kill0): Define new function pulled from kill().
	(kill): Rewrite as frontend to kill0.
	(killsys): Define new function.
	* sigproc.cc (sigelem): Eliminate.
	(sigpacket): Move to sigproc.h.  Subsume sigelem.
	(pending_signals): Use sigpacket rather than sigelem for everything.
	(sig_clear): Ditto.
	(wait_sig): Ditto.
	(sig_send): Rewrite to use siginfo_t argument.
	(sig_send): New function wratpper to sig_send with siginfo_t argument.